force-app/main/default/objects/Access_Token__c/Access_Token__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Access Token</label>
</CustomObject>