force-app/main/default/objects/Access_Token__c/fields/Encrypting_Key__c.field-meta.xml
<CustomField>
    <fullName>Encrypting_Key__c</fullName>
    <label>Encrypting Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>