force-app/main/default/objects/Access_Token__c/fields/Refresh_Value_4__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Value_4__c</fullName>
    <label>Refresh Value 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>