force-app/main/default/objects/Access_Token__c/fields/Refresh_Value__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Value__c</fullName>
    <label>Refresh Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>